# Spatialize

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  light.frag  light.vs  run.sh  shader.frag  shader.vs
SOIL_makefile/: Makefile
dependencies/SOIL/: CMakeLists.txt
dependencies/SOIL_makefile/: Makefile
example/include/: ExampleVrApp.h
example/source/: ExampleVrApp.cpp  app.cpp  main.cpp
share/shaders/: default.fs  default.vs
share/vrsetup/: table-desktop-devices.cfg  table-desktop.vrsetup
spacialize/include/: SpacializeApp.h
spacialize/source/: SpacializeApp.cpp  main.cpp
spatialize/include/: Box.h  Mesh.h  Scene.h  Shader.h  SpatializeApp.h  Texture.h  VRModel.h
spatialize/include/example/: ExampleCube.h
spatialize/include/mesh/: Mesh.h  MeshFactory.h  MeshScene.h
spatialize/include/mesh/concrete/: SimpleMesh.h
spatialize/include/mesh/concrete/assimp/: AssimpMeshFactory.h
spatialize/include/scene/: CompositeScene.h
spatialize/include/texture/: SOILTexture.h
spatialize/source/: Box.cpp  Mesh.cpp  Shader.cpp  SpatializeApp.cpp  Texture.cpp  VRModel.cpp  main.cpp
spatialize/source/example/: ExampleCube.cpp
spatialize/source/mesh/: MeshScene.cpp
spatialize/source/mesh/concrete/: SimpleMesh.cpp
spatialize/source/mesh/concrete/assimp/: AssimpMeshFactory.cpp
spatialize/source/scene/: CompositeScene.cpp
spatialize/source/texture/: SOILTexture.cpp
